增加用户注册，登入
