# routes/user/index.js
@@ -6,6 +6,10 @@ const router = express.Router();
 const user_contrl = require('../../api/user_contrl');
 
 /**
+ * 注册
+ */
+router.post('/register', user_contrl.register);
+/**
  * 根据nickname登入
  */
 router.post('/login', user_contrl.loginByNickname);
